added lucky's flag indicator textures
Former-commit-id: da7f581d9327791585cb1d79776c5e8ef9623895

--- a/data/luckystrike/package.cfg
+++ b/data/luckystrike/package.cfg
@@ -64,3 +64,99 @@ texture c "luckystrike/compteur.jpg" 0 0 0 0.500000
 texture n "luckystrike/compteur_n.jpg"
 texture s "luckystrike/compteur_s.jpg"
 texture z "luckystrike/compteur_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/redflag_right.jpg" 0 0 0 1.000000
+texture n "luckystrike/flag_right_n.jpg"
+texture s "luckystrike/flag_right_s.jpg"
+texture z "luckystrike/flag_right_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/redflag_right.jpg" 4 0 0 1.000000
+texture n "luckystrike/flag_right_n.jpg"
+texture s "luckystrike/flag_right_s.jpg"
+texture z "luckystrike/flag_right_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/blueflag_right.jpg" 0 0 0 1.000000
+texture n "luckystrike/flag_right_n.jpg"
+texture s "luckystrike/flag_right_s.jpg"
+texture z "luckystrike/flag_right_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/blueflag_right.jpg" 4 0 0 1.000000
+texture n "luckystrike/flag_right_n.jpg"
+texture s "luckystrike/flag_right_s.jpg"
+texture z "luckystrike/flag_right_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/greenflag_right.jpg" 0 0 0 1.000000
+texture n "luckystrike/flag_right_n.jpg"
+texture s "luckystrike/flag_right_s.jpg"
+texture z "luckystrike/flag_right_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/greenflag_right.jpg" 4 0 0 1.000000
+texture n "luckystrike/flag_right_n.jpg"
+texture s "luckystrike/flag_right_s.jpg"
+texture z "luckystrike/flag_right_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/yellowflag_right.jpg" 0 0 0 1.000000
+texture n "luckystrike/flag_right_n.jpg"
+texture s "luckystrike/flag_right_s.jpg"
+texture z "luckystrike/flag_right_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/yellowflag_right.jpg" 4 0 0 1.000000
+texture n "luckystrike/flag_right_n.jpg"
+texture s "luckystrike/flag_right_s.jpg"
+texture z "luckystrike/flag_right_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/redflag_left.jpg" 0 0 0 1.000000
+texture n "luckystrike/flag_left_n.jpg"
+texture s "luckystrike/flag_left_s.jpg"
+texture z "luckystrike/flag_left_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/redflag_left.jpg" 4 0 0 1.000000
+texture n "luckystrike/flag_left_n.jpg"
+texture s "luckystrike/flag_left_s.jpg"
+texture z "luckystrike/flag_left_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/blueflag_left.jpg" 0 0 0 1.000000
+texture n "luckystrike/flag_left_n.jpg"
+texture s "luckystrike/flag_left_s.jpg"
+texture z "luckystrike/flag_left_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/blueflag_left.jpg" 4 0 0 1.000000
+texture n "luckystrike/flag_left_n.jpg"
+texture s "luckystrike/flag_left_s.jpg"
+texture z "luckystrike/flag_left_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/greenflag_left.jpg" 0 0 0 1.000000
+texture n "luckystrike/flag_left_n.jpg"
+texture s "luckystrike/flag_left_s.jpg"
+texture z "luckystrike/flag_left_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/greenflag_left.jpg" 4 0 0 1.000000
+texture n "luckystrike/flag_left_n.jpg"
+texture s "luckystrike/flag_left_s.jpg"
+texture z "luckystrike/flag_left_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/yellowflag_left.jpg" 0 0 0 1.000000
+texture n "luckystrike/flag_left_n.jpg"
+texture s "luckystrike/flag_left_s.jpg"
+texture z "luckystrike/flag_left_z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "luckystrike/yellowflag_left.jpg" 4 0 0 1.000000
+texture n "luckystrike/flag_left_n.jpg"
+texture s "luckystrike/flag_left_s.jpg"
+texture z "luckystrike/flag_left_z.jpg"
