some chat/info console tweaking
Former-commit-id: f68bf254169a52719e9ba8983d26d7438eed3af6

--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -82,7 +82,7 @@
 // yawsky 0
 
 "bloodground_intro" = [
-	echo "^fgMISSION: ^fycollect the ^faneutral ^fyflags and take them to the ^faneutral ^fybase in the center."
+	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 "^fgMISSION: ^fycollect the ^faneutral ^fyflags and take them to the ^faneutral ^fybase in the center."
 ]
 "on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ bloodground_intro ] ] ]
 
