--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -1657,8 +1657,8 @@ mmodel "acord/redrock3"
 mmodel "acord/terminal1"
 mmodel "acord/floor1"
 
-mapsound "sfx/teleport" 255 "air" -1 -1
-mapsound "sfx/jumppad" 255 "air" -1 -1
+mapsound "ambience/teleport" 255 "air" -1 -1
+mapsound "ambience/jumppad" 255 "air" -1 -1
 mapsound "ambience/wastewind" 255 "air" -1 -1
 mapsound "ambience/hollowwind" 255 "air" -1 -1
 mapsound "ambience/machine1" 255 "air" -1 -1
