--- a/data/maps/eight.cfg
+++ b/data/maps/eight.cfg
@@ -411,8 +411,8 @@ mmodel "acord/light3off"
 mmodel "acord/light4on"
 mmodel "acord/light4off"
 
-mapsound "sfx/teleport" 255 "air" -1 -1
-mapsound "sfx/jumppad" 255 "air" -1 -1
+mapsound "ambience/teleport" 255 "air" -1 -1
+mapsound "ambience/jumppad" 255 "air" -1 -1
 mapsound "ambience/wastewind" 255 "air" -1 -1
 mapsound "ambience/hollowwind" 255 "air" -1 -1
 mapsound "ambience/machine1" 255 "air" -1 -1
