--- a/data/maps/forge.cfg
+++ b/data/maps/forge.cfg
@@ -81,10 +81,10 @@
 // yawclouds 0
 // yawsky 0
 
-"bloodground_intro" = [
-	echo "^fgMISSION: ^fycollect the ^faneutral ^fyflag in the center and take it to your base on the opposite side."
+"forge_intro" = [
+	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 "^fgMISSION: ^fycollect the ^faneutral ^fyflag in the center and take it to your base on the opposite side."
 ]
-"on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ bloodground_intro ] ] ]
+"on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ forge_intro ] ] ]
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
