--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -137,15 +137,13 @@ numplayers 4
 	]
 ]
 "overseer_construct" = [
-	echo (format "%1This area is under construction!" $yellow)
-	sound (registersound "sfx/chat" 245 "air" -1 -1 1)
+	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 (format "%1This area is under construction!" $yellow)
 ]
 "overseer_intro" = [
 	overseer_welcome = (format "%1%2Blood Frontier%3" $savecolour $red $restorecolour)
 	overseer_action = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "action") "or") $restorecolour)
 	overseer_menu = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "if (cleargui 1) [] [showgui main]") "or") $restorecolour)
-	echo (format "%1Welcome to %2, press [ %3 ] or walk up to a screen to start. Press [ %4 ] to pick up items." $yellow $overseer_welcome $overseer_menu $overseer_action)
-	sound (registersound "sfx/chat" 245 "air" -1 -1 1)
+	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 (format "%1Welcome to %2, press [ %3 ] or walk up to a screen to start. Press [ %4 ] to pick up items." $yellow $overseer_welcome $overseer_menu $overseer_action)
 ]
 "overseer_trigger_1" = [0]
 "overseer_trigger_2" = [0]
@@ -458,10 +456,10 @@ mmodel "acord/console1"
 mmodel "acord/doors/door1"
 mmodel "acord/doors/door2"
 
-mapsound "sfx/teleport" 255 "air" -1 -1
+mapsound "ambience/teleport" 255 "air" -1 -1
 mapsound "ambience/wastewind" 255 "air" -1 -1
 mapsound "ambience/hollowwind" 255 "air" -1 -1
 mapsound "ambience/machine1" 255 "air" -1 -1
-mapsound "sfx/door" 255 "air" -1 -1
+mapsound "ambience/door" 255 "air" -1 -1
 mapsound "ambience/hum" 255 "air" 450 0
 
