--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -84,7 +84,7 @@ skybox "skyboxes/stars"
 // yawsky 0
 
 "tower_intro" = [
-	echo "^fgIMISSION: ^fycollect the ^faneutral ^fyflag at the bottom and take it your base at the top."
+	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 "^fgMISSION: ^fycollect the ^faneutral ^fyflag at the bottom and take it your base at the top."
 ]
 "on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ tower_intro ] ] ]
 
