--- a/data/maps/tranquility.cfg
+++ b/data/maps/tranquility.cfg
@@ -1515,8 +1515,8 @@ mmodel "acord/redrock3"
 mmodel "acord/terminal1"
 mmodel "acord/floor1"
 
-mapsound "sfx/teleport" 250 "air" -1 -1
-mapsound "sfx/jumppad" 250 "air" -1 -1
+mapsound "ambience/teleport" 250 "air" -1 -1
+mapsound "ambience/jumppad" 250 "air" -1 -1
 mapsound "ambience/wastewind" 25 "air" -1 -1
 mapsound "ambience/hollowwind" 25 "air" -1 -1
 mapsound "ambience/machine1" 75 "air" -1 -1
