--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -2838,8 +2838,8 @@ mmodel "acord/redrock3"
 mmodel "acord/terminal1"
 mmodel "acord/floor1"
 
-mapsound "sfx/jumppad" 255 "air" -1 -1
-mapsound "sfx/teleport" 255 "air" -1 -1
+mapsound "ambience/jumppad" 255 "air" -1 -1
+mapsound "ambience/teleport" 255 "air" -1 -1
 mapsound "ambience/alienwind" 255 "air" -1 -1
 mapsound "ambience/blowwind" 255 "air" -1 -1
 mapsound "ambience/cavedrip" 255 "air" -1 -1
