--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -2365,8 +2365,8 @@ mmodel "pipes/Horizontal/TurnDown"
 mmodel "pipes/Horizontal/TurnLeftRight"
 mmodel "pipes/Horizontal/Turnup"
 
-mapsound "sfx/teleport" 255 "air" -1 -1
-mapsound "sfx/jumppad" 255 "air" -1 -1
+mapsound "ambience/teleport" 255 "air" -1 -1
+mapsound "ambience/jumppad" 255 "air" -1 -1
 mapsound "ambience/wastewind" 255 "air" -1 -1
 mapsound "ambience/hollowwind" 255 "air" -1 -1
 mapsound "ambience/machine1" 255 "air" -1 -1
