--- a/data/maps/warground.cfg
+++ b/data/maps/warground.cfg
@@ -316,8 +316,8 @@ mmodel "acord/doors/door3"
 mmodel "acord/doors/door4"
 mmodel "acord/doors/door4b"
 
-mapsound "sfx/teleport" 255 "air" -1 -1
-mapsound "sfx/jumppad" 255 "air" -1 -1
+mapsound "ambience/teleport" 255 "air" -1 -1
+mapsound "ambience/jumppad" 255 "air" -1 -1
 mapsound "ambience/wastewind" 255 "air" -1 -1
 mapsound "ambience/hollowwind" 255 "air" -1 -1
 mapsound "ambience/machine1" 255 "air" -1 -1
