penguin skybox for forge map
Former-commit-id: e1100c82466fe0a564cd81446cbe089d13df42e1

--- a/data/maps/forge.cfg
+++ b/data/maps/forge.cfg
@@ -11,14 +11,14 @@
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
 // cloudblend 1.0
-// cloudbox "acord/clouds"
+// cloudbox ""
 // cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
 // cloudheight 0.2
 // cloudlayer "acord/cloudlayer"
 // cloudscale 3.0
-// cloudscrollx 0.02
+// cloudscrollx 0.01
 // cloudscrolly 0.0
 // cloudsubdiv 16
 // crawlspeed 20.0
@@ -28,7 +28,7 @@
 // floorcurb 5.0
 // floorz 0.867
 // fog 1500
-// fogcolour 0xAAAAAA
+// fogcolour 0x504739
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassheight 4
@@ -60,7 +60,7 @@
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// skybox "skyboxes/grey2"
+// skybox "penguins/wrath"
 // skylight 0x3F3F3F
 // skytexture 0
 // slopez 0.5
