massive sky hacks; added skycolour/skyblend/skyglare/skybgcolour/skybgglare/cloudglare/cloudbgglare, split cloudcolour/cloudlayercolour and cloudblend/cloudlayerblend, removed black skybox in favour of skybgcolour and updated maps accordingly
Former-commit-id: bed35c2ee42db3f0e02a5be5d163436cc98c4ad7

--- a/data/maps/citadel.cfg
+++ b/data/maps/citadel.cfg
@@ -15,8 +15,12 @@
 // cloudclip 0.5
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
+// cloudglare 0
 // cloudheight 0.01
-// cloudlayer "<mad:0.65/0.65/0.65>acord/cloudlayer"
+// cloudlayer "acord/cloudlayer"
+// cloudlayerblend 1.0
+// cloudlayercolour 0xAAAAAA
+// cloudlayerglare 0
 // cloudscale 1.0
 // cloudscrollx 0.01
 // cloudscrolly -0.001
@@ -60,7 +64,12 @@
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// skybox "<mad:0.5/0.5/0.5>skyboxes/stars"
+// skybgcolour 0x000000
+// skybgglare 1
+// skyblend 1.0
+// skybox "skyboxes/stars"
+// skycolour 0x888888
+// skyglare 1
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
