--- a/data/maps/dualstar.cfg
+++ b/data/maps/dualstar.cfg
@@ -3,7 +3,7 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
-// airfric 25.0
+// aircurb 25.0
 // ambient 0x050505
 // blurlms 0
 // blurskylight 0
@@ -15,8 +15,12 @@
 // cloudclip 0.5
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
+// cloudglare 0
 // cloudheight 0.2
 // cloudlayer ""
+// cloudlayerblend 1.0
+// cloudlayercolour 0xFFFFFF
+// cloudlayerglare 0
 // cloudscale 1.0
 // cloudscrollx 0.0
 // cloudscrolly 0.0
@@ -25,8 +29,7 @@
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatfric 5.0
-// floorfric 5.0
+// floorcurb 5.0
 // floorz 0.867
 // fog 4000
 // fogcolour 0x000000
@@ -49,7 +52,7 @@
 // lighterror 8
 // lightlod 0
 // lightprecision 128
-// liquidfric 10.0
+// liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
@@ -61,8 +64,12 @@
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// sinkfric 2.0
-// skybox "skyboxes/black"
+// skybgcolour 0x000000
+// skybgglare 1
+// skyblend 1.0
+// skybox ""
+// skycolour 0xFFFFFF
+// skyglare 1
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
