--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -3,20 +3,24 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
-// airfric 25.0
+// aircurb 25.0
 // ambient 0x0A0A0A
 // blurlms 2
 // blurskylight 2
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudblend 0.75
-cloudbox "<mad:1/0/0>skyboxes/gradient"
+// cloudblend 0.5
+// cloudbox "skyboxes/gradient"
 // cloudclip 0.0
-// cloudcolour 0xFFFFFF
+// cloudcolour 0xFF1100
 // cloudfade 0.2
+// cloudglare 0
 // cloudheight -0.1
 // cloudlayer "textures/lava"
+// cloudlayerblend 1.0
+// cloudlayercolour 0xFFCC99
+// cloudlayerglare 0
 // cloudscale 0.1
 // cloudscrollx 0.001
 // cloudscrolly 0.001
@@ -25,10 +29,9 @@ cloudbox "<mad:1/0/0>skyboxes/gradient"
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatfric 5.0
-// floorfric 5.0
+// floorcurb 5.0
 // floorz 0.867
-// fog 2400
+// fog 4200
 // fogcolour 0x400800
 // grassanimmillis 3000
 // grassanimscale 0.03
@@ -49,7 +52,7 @@ cloudbox "<mad:1/0/0>skyboxes/gradient"
 // lighterror 8
 // lightlod 0
 // lightprecision 212
-// liquidfric 10.0
+// liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
@@ -61,8 +64,12 @@ cloudbox "<mad:1/0/0>skyboxes/gradient"
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// sinkfric 3.0
-skybox "skyboxes/stars"
+// skybgcolour 0x000000
+// skybgglare 1
+// skyblend 1.0
+// skybox "skyboxes/stars"
+// skycolour 0xFFFFFF
+// skyglare 1
 // skylight 0x331111
 // skytexture 1
 // slopez 0.5
@@ -83,10 +90,10 @@ skybox "skyboxes/stars"
 // yawclouds 0
 // yawsky 0
 
+"on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ tower_intro ] ] ]
 "tower_intro" = [
 	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 "^fgMISSION: ^fycollect the ^faneutral ^fyflag at the bottom and take it your base at the top."
 ]
-"on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ tower_intro ] ] ]
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
