--- a/data/maps/eight.cfg
+++ b/data/maps/eight.cfg
@@ -3,7 +3,7 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
-// airfric 25.0
+// aircurb 25.0
 // ambient 0x191919
 // blurlms 0
 // blurskylight 0
@@ -11,12 +11,16 @@
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
 // cloudblend 0.75
-// cloudbox "<mad:0.2/0.2/0.4>acord/sky3"
+// cloudbox "acord/sky3"
 // cloudclip 0.51
-// cloudcolour 0xFFFFFF
+// cloudcolour 0x222266
 // cloudfade 0.1
+// cloudglare 0
 // cloudheight 0.01
 // cloudlayer ""
+// cloudlayerblend 0.75
+// cloudlayercolour 0xFFFFFF
+// cloudlayerglare 0
 // cloudscale 1.0
 // cloudscrollx 0.0
 // cloudscrolly 0.0
@@ -25,8 +29,7 @@
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatfric 5.0
-// floorfric 5.0
+// floorcurb 5.0
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
@@ -49,7 +52,7 @@
 // lighterror 8
 // lightlod 0
 // lightprecision 32
-// liquidfric 10.0
+// liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
@@ -61,8 +64,12 @@
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// sinkfric 2.0
-skybox "skyboxes/stars"
+// skybgcolour 0x000000
+// skybgglare 1
+// skyblend 1.0
+// skybox "skyboxes/stars"
+// skycolour 0xFFFFFF
+// skyglare 1
 // skylight 0x222288
 // skytexture 1
 // slopez 0.5
