--- a/data/maps/rivals.cfg
+++ b/data/maps/rivals.cfg
@@ -3,31 +3,33 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
-// airfric 25.0
+// aircurb 25.0
 // ambient 0x191919
 // blurlms 0
 // blurskylight 0
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudalpha 1.0
 // cloudblend 1.0
 // cloudbox "acord/clouds"
 // cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 1.0
+// cloudglare 0
 // cloudheight 0.0
 // cloudlayer ""
+// cloudlayerblend 1.0
+// cloudlayercolour 0xFFFFFF
+// cloudlayerglare 0
 // cloudscale 1.0
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-crawlspeed 20
+// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatfric 5.0
-// floorfric 5.0
+// floorcurb 5.0
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
@@ -35,10 +37,9 @@ crawlspeed 20
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// grasstaper 0.2
-gravity 50
-impulsemod 60
-impulsespeed 30
+// gravity 50.0
+// impulsemod 60.0
+// impulsespeed 30.0
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -51,22 +52,24 @@ impulsespeed 30
 // lighterror 8
 // lightlod 0
 // lightprecision 32
-// liquiddampen 0.5
-// liquidfric 10.0
-// liquidscale 0.9
+// liquidcurb 10.0
+// liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
 // maptitle "Rivals by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-movespeed 40
-numplayers 6
-// numteamplayers 6
+// movespeed 40.0
+// numplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// sinkfric 3.0
-skybox "<mad:0.25/0.25/0.25>skyboxes/stars"
+// skybgcolour 0x000000
+// skybgglare 1
+// skyblend 1.0
+// skybox "skyboxes/stars"
+// skycolour 0x444444
+// skyglare 1
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
