--- a/data/maps/vertigo.cfg
+++ b/data/maps/vertigo.cfg
@@ -11,7 +11,8 @@
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
 // cloudblend 0.09
-cloudbox "<mad:0.5/0.75/1.0>skyboxes/gradient"
+cloudbox "skyboxes/gradient"
+cloudcolour 0x4488FF
 // cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
