--- a/data/maps/nova.cfg
+++ b/data/maps/nova.cfg
@@ -3,31 +3,33 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
-// airfric 25.0
+// aircurb 25.0
 // ambient 0x191919
 // blurlms 0
 // blurskylight 0
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudalpha 1.0
 // cloudblend 1.0
 // cloudbox ""
 // cloudclip 0.5
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
+// cloudglare 0
 // cloudheight 0.2
 // cloudlayer ""
+// cloudlayerblend 1.0
+// cloudlayercolour 0xFFFFFF
+// cloudlayerglare 0
 // cloudscale 1.0
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-crawlspeed 20
+// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatfric 5.0
-// floorfric 5.0
+// floorcurb 5.0
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
@@ -35,12 +37,11 @@ crawlspeed 20
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// grasstaper 0.2
-gravity 50
-impulsemod 60
-impulsespeed 30
+// gravity 50.0
+// impulsemod 60.0
+// impulsespeed 40.0
 // impulsetime 0
-// jumpspeed 50.0
+// jumpspeed 60.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
 // lavafog 50
@@ -51,22 +52,24 @@ impulsespeed 30
 // lighterror 8
 // lightlod 0
 // lightprecision 86
-// liquiddampen 0.5
-// liquidfric 10.0
-// liquidscale 0.9
+// liquidcurb 10.0
+// liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
 // maptitle "Nova by Derek 'Favorito' Ponicki"
 // mmshadows 2
 // mmskylight 1
-movespeed 40
-numplayers 10
-// numteamplayers 12
+// movespeed 40.0
+// numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// sinkfric 2.0
+// skybgcolour 0x000000
+// skybgglare 1
+// skyblend 1.0
 // skybox "acord/overmars"
+// skycolour 0xFFFFFF
+// skyglare 1
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
