ctfdebug command for if/when flags spawn incorrectly, map fixes/tweaks
Former-commit-id: 0de4a2293775422b627cca5864ec7483210f6e22

--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -15,8 +15,12 @@
 // cloudclip 0.5
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
+// cloudglare 0
 // cloudheight 0.2
 // cloudlayer ""
+// cloudlayerblend 1.0
+// cloudlayercolour 0xFFFFFF
+// cloudlayerglare 0
 // cloudscale 1.0
 // cloudscrollx 0.0
 // cloudscrolly 0.0
@@ -29,7 +33,6 @@
 // floorz 0.867
 // fog 1000
 // fogcolour 0xCCCCCC
-// glasscolour 0x2060F0
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassheight 4
@@ -61,7 +64,12 @@
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
+// skybgcolour 0x000000
+// skybgglare 1
+// skyblend 1.0
 // skybox "skyboxes/grey"
+// skycolour 0xFFFFFF
+// skyglare 1
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
@@ -91,10 +99,6 @@ texture 1 "textures/waterfalldudv.jpg"
 
 texture lava "textures/lava.jpg" 0 0 0 8.000000
 texture 1 "textures/lava.jpg"
-
-texture glass "textures/glass.jpg" 0 0 0 8.000000
-texture 1 "textures/watern.jpg"
-texture 1 "textures/waterdudv.jpg"
 
 setshader stdworld
 texture c "acord/clouds.jpg" 0 0 0 1.000000 // 0
