deli:grass adjust, pusher
Former-commit-id: eb0a97fbc6e683db37775a7f705b66f091625683

--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -1581,7 +1581,7 @@ setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
 texture c "mitaman/mm-grassdead42.jpg" 1 0 0 0.750000 // 249
 texture n "mitaman/mm-grassdead42_normal.jpg"
 texture s "mitaman/mm-grassdead42_spec.jpg"
-autograss "luckystrike/grass_lucky.png"
+autograss "<mad:1.2/1/1>luckystrike/grass_lucky_green.png"
 
 setshader bumpspecmapworld
 setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
