don't cull waypoints in editmode, fixed water/clip/movespeed/gravity in hollow
Former-commit-id: 5942ff60489f86be38f43826050d75866e0d2ac3

--- a/data/maps/hollow.cfg
+++ b/data/maps/hollow.cfg
@@ -3,7 +3,7 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
-// airfric 25.0
+// aircurb 25.0
 // ambient 0x000000
 // blurlms 0
 // blurskylight 0
@@ -15,8 +15,12 @@
 // cloudclip 0.5
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
+// cloudglare 0
 // cloudheight 0.2
 // cloudlayer "acord/cloudlayer"
+// cloudlayerblend 0.75
+// cloudlayercolour 0xFFFFFF
+// cloudlayerglare 0
 // cloudscale 1.0
 // cloudscrollx 0.008
 // cloudscrolly 0.004
@@ -25,16 +29,15 @@
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatfric 5.0
-// floorfric 5.0
+// floorcurb 5.0
 // floorz 0.867
-// fog 240
+// fog 250
 // fogcolour 0x000000
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// gravity 75.0
+// gravity 65.0
 // impulsemod 60.0
 // impulsespeed 20.0
 // impulsetime 0
@@ -49,20 +52,24 @@
 // lighterror 8
 // lightlod 0
 // lightprecision 36
-// liquidfric 10.0
-// liquidspeed 0.85
+// liquidcurb 20.0
+// liquidspeed 1.0
 // lmshadows 1
 // mapmusic ""
-maptitle "Hollow by Jonathan 'W!CK3D' Roels"
+// maptitle "Hollow by Jonathan 'W!CK3D' Roels"
 // mmshadows 2
 // mmskylight 1
-// movespeed 40.0
-numplayers 6
+// movespeed 45.0
+// numplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// sinkfric 2.0
+// skybgcolour 0x000000
+// skybgglare 1
+// skyblend 1.0
 // skybox "acord/clouds"
+// skycolour 0xFFFFFF
+// skyglare 1
 // skylight 0x98967F
 // skytexture 1
 // slopez 0.5
