fixed autosave/stopautosave alias, added selectents alias
Former-commit-id: 7050aea959c10745d006e289eba3cf149ca4307b

--- a/data/engine.cfg
+++ b/data/engine.cfg
@@ -290,6 +290,8 @@ passthrough = [
   
 ]
 
+alias selectents [ entselect [&& (insel) (enttype $arg1)] ]
+
 alias entchg [
   a0 = (entattr 0)
   a1 = (entattr 1)
@@ -300,18 +302,16 @@ alias entchg [
   entedit (enttype) $a0 $a1 $a2 $a3 $a4
 ]
 
-noauto = 0
+noautosave = 0
 alias autosave [
-	if (= $noauto 0) [
-		savebak 1;
-		savecurrentmap;
-		savebak 2;
+	if (= $noautosave 0) [
+		savemap
 		sleep 600000 [ autosave ]
-	] [	noauto = 0 ]
+	] [	noautosave = 0 ]
 ]
-alias stopauto [ noauto = 1 ]
+alias stopautosave [ noautosave = 1 ]
 
-alias togglesound [ if (> $soundvol 0) [ soundvol 0; echo "sound off" ] [ soundvol 255; echo "sound on" ] ]
+alias togglesound [ if (> $mastervol 0) [ mastervol 0; echo "sound off" ] [ mastervol 255; echo "sound on" ] ]
 
 alias screen [
 	showhud 0
