rename titlecard to titlefade, skip first iteration of maptime after map start to get the proper time slice
Former-commit-id: 351854a4cbb43cfb4188756338a6518157d4ca83

--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -84,7 +84,7 @@
 "bloodground_intro" = [
 	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 "^fgMISSION: ^fycollect the ^faneutral ^fyflags and take them to the ^faneutral ^fybase in the center."
 ]
-"on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ bloodground_intro ] ] ]
+"on_start" = [ if (= (gamemode) 6) [ sleep $titlefade [ bloodground_intro ] ] ]
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
