--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -87,7 +87,7 @@ numplayers 4
 // yawclouds 0
 // yawsky 0
 
-"on_start" = [ if (= (gamemode) 1) [ sleep $titlecard [ overseer_intro ] ] ]
+"on_start" = [ if (= (gamemode) 1) [ sleep $titlefade [ overseer_intro ] ] ]
 "on_trigger_1" = [
 	if (= (gamemode) 1) [
 		if (|| (= $overseer_trigger_1 0) (>= (- (getmillis) $overseer_trigger_1) 5000)) [
