--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -90,7 +90,7 @@
 // yawclouds 0
 // yawsky 0
 
-"on_start" = [ if (= (gamemode) 6) [ sleep $titlecard [ tower_intro ] ] ]
+"on_start" = [ if (= (gamemode) 6) [ sleep $titlefade [ tower_intro ] ] ]
 "tower_intro" = [
 	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 "^fgMISSION: ^fycollect the ^faneutral ^fyflag at the bottom and take it your base at the top."
 ]
