--- a/data/maps/wet.cfg
+++ b/data/maps/wet.cfg
@@ -155,12 +155,14 @@ texture s "acord/asphalt3s.jpg"
 texture z "acord/asphalt3z.jpg"
 
 setshader bumpspecmapparallaxglowworld
+setpixelparam 1 1.000000 1.000000 1.000000 1.000000
 texture c "acord/barlighta.jpg" 0 0 0 0.250000 // 11
 texture n "acord/barlightan.jpg"
 texture s "acord/lowspec.jpg"
 texture z "acord/barlightaz.jpg"
 
 setshader bumpspecmapparallaxglowworld
+setpixelparam 1 1.000000 1.000000 1.000000 1.000000
 texture c "acord/barlighta.jpg" 1 0 0 0.250000 // 12
 texture n "acord/barlightan.jpg"
 texture s "acord/lowspec.jpg"
@@ -977,6 +979,7 @@ texture s "acord/nospec.jpg"
 texture z "acord/sidewalk2z.jpg"
 
 setshader bumpspecmapparallaxglowworld
+setpixelparam 1 1.000000 1.000000 1.000000 1.000000
 texture c "acord/barlightb.jpg" 1 0 0 0.250000 // 148
 texture n "acord/barlightbn.jpg"
 texture s "acord/nospec.jpg"
@@ -3072,36 +3075,42 @@ texture s "kurt/rock01_spec.jpg"
 texture z "kurt/rock01_height.jpg"
 
 setshader bumpspecmapparallaxglowworld
+setpixelparam 1 1.000000 1.000000 1.000000 1.000000
 texture c "acord/barlightb.jpg" 0 0 0 0.250000 // 497
 texture n "acord/barlightbn.jpg"
 texture s "acord/nospec.jpg"
 texture z "acord/barlightbz.jpg"
 
 setshader bumpspecmapparallaxglowworld
+setpixelparam 1 1.000000 1.000000 1.000000 1.000000
 texture c "acord/barlightb.jpg" 2 0 0 0.250000 // 498
 texture n "acord/barlightbn.jpg"
 texture s "acord/nospec.jpg"
 texture z "acord/barlightbz.jpg"
 
 setshader bumpspecmapparallaxglowworld
+setpixelparam 1 1.000000 1.000000 1.000000 1.000000
 texture c "acord/barlightb.jpg" 3 0 0 0.250000 // 499
 texture n "acord/barlightbn.jpg"
 texture s "acord/nospec.jpg"
 texture z "acord/barlightbz.jpg"
 
 setshader bumpspecmapparallaxglowworld
+setpixelparam 1 1.000000 1.000000 1.000000 1.000000
 texture c "acord/barlightb.jpg" 4 0 0 0.250000 // 500
 texture n "acord/barlightbn.jpg"
 texture s "acord/nospec.jpg"
 texture z "acord/barlightbz.jpg"
 
 setshader bumpspecmapparallaxglowworld
+setpixelparam 1 1.000000 1.000000 1.000000 1.000000
 texture c "acord/barlighta.jpg" 0 0 0 0.250000 // 501
 texture n "acord/barlightan.jpg"
 texture s "acord/lowspec.jpg"
 texture z "acord/barlightaz.jpg"
 
 setshader bumpspecmapparallaxglowworld
+setpixelparam 1 1.000000 1.000000 1.000000 1.000000
 texture c "acord/barlighta.jpg" 1 0 0 0.250000 // 502
 texture n "acord/barlightan.jpg"
 texture s "acord/lowspec.jpg"
