fixed sounds in wet and added it to rotation, added maptitle to forge
Former-commit-id: a9369c5946084dc82c988624a30111aa6cfc0ed9

--- a/data/maps/wet.cfg
+++ b/data/maps/wet.cfg
@@ -56,7 +56,7 @@
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-maptitle "Wet by LuckyStrike-Rx"
+// maptitle "Wet by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
 // movespeed 40.0
