Wet: glow world and about 40% success capture for bots
Former-commit-id: cbf10dfa951483119b1b985e70656d1ab87cacc6

--- a/data/maps/wet.cfg
+++ b/data/maps/wet.cfg
@@ -154,19 +154,17 @@ texture n "acord/asphalt3n.jpg"
 texture s "acord/asphalt3s.jpg"
 texture z "acord/asphalt3z.jpg"
 
-setshader bumpspecmapparallaxglowworld
-setpixelparam 1 1.000000 1.000000 1.000000 1.000000
+setshader bumpglowworld
+setpixelparam 0 0.5 0.5 0.5
 texture c "acord/barlighta.jpg" 0 0 0 0.250000 // 11
 texture n "acord/barlightan.jpg"
-texture s "acord/lowspec.jpg"
-texture z "acord/barlightaz.jpg"
+texture g "acord/barlightaz.jpg"
 
-setshader bumpspecmapparallaxglowworld
-setpixelparam 1 1.000000 1.000000 1.000000 1.000000
+setshader bumpglowworld
+setpixelparam 0 0.5 0.5 0.5
 texture c "acord/barlighta.jpg" 1 0 0 0.250000 // 12
 texture n "acord/barlightan.jpg"
-texture s "acord/lowspec.jpg"
-texture z "acord/barlightaz.jpg"
+texture g "acord/barlightaz.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/concrete.jpg" 0 0 0 0.500000 // 13
@@ -978,12 +976,11 @@ texture n "acord/sidewalk2n.jpg"
 texture s "acord/nospec.jpg"
 texture z "acord/sidewalk2z.jpg"
 
-setshader bumpspecmapparallaxglowworld
-setpixelparam 1 1.000000 1.000000 1.000000 1.000000
+setshader bumpglowworld
+setpixelparam 0 0.5 0.5 0.5
 texture c "acord/barlightb.jpg" 1 0 0 0.250000 // 148
 texture n "acord/barlightbn.jpg"
-texture s "acord/nospec.jpg"
-texture z "acord/barlightbz.jpg"
+texture g "acord/barlightbz.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/marsground.jpg" 1 0 0 1.000000 // 149
@@ -3074,47 +3071,41 @@ texture n "kurt/rock01_norm.jpg"
 texture s "kurt/rock01_spec.jpg"
 texture z "kurt/rock01_height.jpg"
 
-setshader bumpspecmapparallaxglowworld
-setpixelparam 1 1.000000 1.000000 1.000000 1.000000
+setshader bumpglowworld
+setpixelparam 0 0.5 0.5 0.5
 texture c "acord/barlightb.jpg" 0 0 0 0.250000 // 497
 texture n "acord/barlightbn.jpg"
-texture s "acord/nospec.jpg"
-texture z "acord/barlightbz.jpg"
+texture g "acord/barlightbz.jpg"
 
-setshader bumpspecmapparallaxglowworld
-setpixelparam 1 1.000000 1.000000 1.000000 1.000000
+setshader bumpglowworld
+setpixelparam 0 0.5 0.5 0.5
 texture c "acord/barlightb.jpg" 2 0 0 0.250000 // 498
 texture n "acord/barlightbn.jpg"
-texture s "acord/nospec.jpg"
-texture z "acord/barlightbz.jpg"
+texture g "acord/barlightbz.jpg"
 
-setshader bumpspecmapparallaxglowworld
-setpixelparam 1 1.000000 1.000000 1.000000 1.000000
+setshader bumpglowworld
+setpixelparam 0 0.5 0.5 0.5
 texture c "acord/barlightb.jpg" 3 0 0 0.250000 // 499
 texture n "acord/barlightbn.jpg"
-texture s "acord/nospec.jpg"
-texture z "acord/barlightbz.jpg"
+texture g "acord/barlightbz.jpg"
 
-setshader bumpspecmapparallaxglowworld
-setpixelparam 1 1.000000 1.000000 1.000000 1.000000
+setshader bumpglowworld
+setpixelparam 0 0.5 0.5 0.5
 texture c "acord/barlightb.jpg" 4 0 0 0.250000 // 500
 texture n "acord/barlightbn.jpg"
-texture s "acord/nospec.jpg"
-texture z "acord/barlightbz.jpg"
+texture g "acord/barlightbz.jpg"
 
-setshader bumpspecmapparallaxglowworld
-setpixelparam 1 1.000000 1.000000 1.000000 1.000000
+setshader bumpglowworld
+setpixelparam 0 0.5 0.5 0.5
 texture c "acord/barlighta.jpg" 0 0 0 0.250000 // 501
 texture n "acord/barlightan.jpg"
-texture s "acord/lowspec.jpg"
-texture z "acord/barlightaz.jpg"
+texture g "acord/barlightaz.jpg"
 
-setshader bumpspecmapparallaxglowworld
-setpixelparam 1 1.000000 1.000000 1.000000 1.000000
+setshader bumpglowworld
+setpixelparam 0 0.5 0.5 0.5
 texture c "acord/barlighta.jpg" 1 0 0 0.250000 // 502
 texture n "acord/barlightan.jpg"
-texture s "acord/lowspec.jpg"
-texture z "acord/barlightaz.jpg"
+texture g "acord/barlightaz.jpg"
 texscroll -10.000000 0.000000
 
 mmodel "acord/acbush0"
