tweaked showent* setup to be saner, increased movespeed to 50
Former-commit-id: 5d285d2ec4c0c2028e15f8e67e2ac4f70849683a

--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -56,7 +56,7 @@
 // maptitle "Bath by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
-// movespeed 40.0
+movespeed 50.0
 // numplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
