--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -55,7 +55,7 @@
 // maptitle "BloodGrounds (Q3DM6) by Jonathan 'W!CK3D'"
 // mmshadows 1
 // mmskylight 1
-// movespeed 40.0
+movespeed 50.0
 // numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
