--- a/data/maps/dualstar.cfg
+++ b/data/maps/dualstar.cfg
@@ -59,7 +59,7 @@
 // maptitle "DualStar by Jonathan 'W!CK3D' Roels"
 // mmshadows 2
 // mmskylight 1
-// movespeed 40.0
+movespeed 50.0
 // numplayers 12
 // refractfog 1
 // shadowmapambient 0x000000
