--- a/data/maps/enigma.cfg
+++ b/data/maps/enigma.cfg
@@ -59,8 +59,8 @@
 // maptitle "Enigma by Jonathan 'W!CK3D' Roels"
 // mmshadows 2
 // mmskylight 1
-// movespeed 50.0
-// numplayers 12
+movespeed 50.0
+numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
