--- a/data/maps/hollow.cfg
+++ b/data/maps/hollow.cfg
@@ -59,7 +59,7 @@
 // maptitle "Hollow by Jonathan 'W!CK3D' Roels"
 // mmshadows 2
 // mmskylight 1
-// movespeed 45.0
+movespeed 45.0
 // numplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
