--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -59,7 +59,7 @@
 // maptitle "Venus by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
-// movespeed 40.0
+movespeed 50.0
 // numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
