--- a/data/maps/chaos.cfg
+++ b/data/maps/chaos.cfg
@@ -56,7 +56,7 @@
  maptitle "Chaos by Jonathan 'W!CK3D' Roels"
 // mmshadows 2
 // mmskylight 1
-// movespeed 50.0
+movespeed 50.0
 // numplayers 24
 // refractfog 1
 // shadowmapambient 0x000000
