--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -59,7 +59,7 @@
 // maptitle "Delicatessen by LuckyStrike-Rx"
 // mmshadows 1
 // mmskylight 1
-// movespeed 40.0
+movespeed 50.0
 // numplayers 12
 // refractfog 1
 // shadowmapambient 0x000000
