--- a/data/maps/forge.cfg
+++ b/data/maps/forge.cfg
@@ -59,8 +59,8 @@
 // maptitle "Forge by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
-// movespeed 40.0
-// numplayers 0
+movespeed 50.0
+numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
