--- a/data/maps/gladiator.cfg
+++ b/data/maps/gladiator.cfg
@@ -59,7 +59,7 @@
 // maptitle "Gladiator by Anthony Cord"
 // mmshadows 2
 // mmskylight 1
-// movespeed 40.0
+movespeed 50.0
 // numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
