--- a/data/maps/mpspbf2.cfg
+++ b/data/maps/mpspbf2.cfg
@@ -23,7 +23,7 @@ gravity 60.0
 numteamplayers 4
 // cloudscale 0.4
 // stepspeed 1.0
-// movespeed 50.0
+movespeed 50.0
 // blurskylight 0
 // spincloudlayer -0.5
 // wallz 0.2
