--- a/data/maps/nova.cfg
+++ b/data/maps/nova.cfg
@@ -59,7 +59,7 @@
 // maptitle "Nova by Derek 'Favorito' Ponicki"
 // mmshadows 2
 // mmskylight 1
-// movespeed 40.0
+movespeed 50.0
 // numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
