--- a/data/maps/rivals.cfg
+++ b/data/maps/rivals.cfg
@@ -59,7 +59,7 @@
 // maptitle "Rivals by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-// movespeed 40.0
+movespeed 50.0
 // numplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
