--- a/data/maps/siege.cfg
+++ b/data/maps/siege.cfg
@@ -55,7 +55,7 @@
 // maptitle "Siege by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-// movespeed 40.0
+movespeed 50.0
 // numplayers 24
 // refractfog 1
 // shadowmapambient 0x000000
