--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -59,7 +59,7 @@
 // maptitle "Smouldering by Kurt Kessler"
 // mmshadows 1
 // mmskylight 1
-// movespeed 40.0
+movespeed 50.0
 // numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
