--- a/data/maps/tranquility.cfg
+++ b/data/maps/tranquility.cfg
@@ -55,8 +55,8 @@
 // maptitle "Tranquility by Derek 'Favorito' Ponicki"
 // mmshadows 2
 // mmskylight 1
-// movespeed 40.0
-// numplayers 24
+movespeed 50.0
+numplayers 16
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
