--- a/data/maps/warground.cfg
+++ b/data/maps/warground.cfg
@@ -59,7 +59,7 @@
 // maptitle "Warground by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-// movespeed 40.0
+movespeed 50.0
 // numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
