forge : blend map, less bots, less nades
Former-commit-id: efa84175360e1dffef171cb24350ce3bc136e307

--- a/data/maps/forge.cfg
+++ b/data/maps/forge.cfg
@@ -59,8 +59,8 @@
 // maptitle "Forge by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
-movespeed 50.0
-numplayers 10
+// movespeed 40.0
+// numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
@@ -812,6 +812,7 @@ texture c "acord/oldmetal1.jpg" 0 0 0 0.500000 // 119
 texture n "acord/oldmetal1n.jpg"
 texture s "acord/lowspec.jpg"
 texture z "acord/oldmetal1z.jpg"
+texlayer 13
 
 setshader bumpspecmapparallaxworld
 texture c "acord/oldmetal1.jpg" 1 0 0 0.500000 // 120
@@ -980,6 +981,7 @@ texture c "acord/sidewalk2.jpg" 0 0 0 0.500000 // 147
 texture n "acord/sidewalk2n.jpg"
 texture s "acord/nospec.jpg"
 texture z "acord/sidewalk2z.jpg"
+texlayer 13
 
 setshader bumpspecmapparallaxworld
 texture c "acord/barlightb.jpg" 1 0 0 1.000000 // 148
@@ -1526,12 +1528,14 @@ texture c "acord/conc6.jpg" 0 0 0 0.500000 // 237
 texture n "acord/conc6n.jpg"
 texture s "<mad:0.4/0.4/0.4>acord/conc6s.jpg"
 texture z "acord/conc6z.jpg"
+texlayer 13
 
 setshader bumpspecmapparallaxworld
 texture c "acord/conc6.jpg" 1 0 0 0.500000 // 238
 texture n "acord/conc6n.jpg"
 texture s "acord/conc6s.jpg"
 texture z "acord/conc6z.jpg"
+texlayer 13
 
 setshader bumpspecmapparallaxworld
 texture c "acord/conc8.jpg" 0 0 0 0.500000 // 239
@@ -1814,6 +1818,7 @@ setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
 texture c "mitaman/mm-iron02.jpg" 0 0 0 1.000000 // 286
 texture n "mitaman/mm-iron02_normal.jpg"
 texture s "mitaman/mm-iron02_spec.jpg"
+texlayer 295
 
 setshader bumpspecmapworld
 setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
