cleanups, fix alpha underwater hallway in tranquility
Former-commit-id: 1f8083d4b673be8fe7a3df8e2895c9282a1332a1

--- a/data/maps/tranquility.cfg
+++ b/data/maps/tranquility.cfg
@@ -15,8 +15,12 @@
 // cloudclip 0.5
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
+// cloudglare 0
 // cloudheight 1e-005
 // cloudlayer ""
+// cloudlayerblend 0.75
+// cloudlayercolour 0xFFFFFF
+// cloudlayerglare 0
 // cloudscale 1.0
 // cloudscrollx 0.01
 // cloudscrolly -0.01
@@ -55,12 +59,17 @@
 // maptitle "Tranquility by Derek 'Favorito' Ponicki"
 // mmshadows 2
 // mmskylight 1
-movespeed 50.0
-numplayers 16
+// movespeed 50.0
+// numplayers 16
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
+// skybgcolour 0x000000
+// skybgglare 1
+// skyblend 1.0
 // skybox "acord/sky6"
+// skycolour 0xFFFFFF
+// skyglare 1
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
