flame and part_dir tweaks
Former-commit-id: bdc864850dd8952e7bcb9464b3f4295538c908bc

--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -59,7 +59,7 @@
 // maptitle "Tower by Quinton Reeves"
 // mmshadows 1
 // mmskylight 1
-movespeed 50.0
+// movespeed 50.0
 // numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
