--- a/data/maps/wet.cfg
+++ b/data/maps/wet.cfg
@@ -59,7 +59,7 @@
 // maptitle "Wet by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
-movespeed 50.0
+// movespeed 50.0
 // numplayers 2
 // refractfog 1
 // shadowmapambient 0x000000
@@ -112,12 +112,13 @@ texture c "<mad:.6/.6/.6><mad:0.75/0.25/0.125>acord/nfloor1.jpg" 0 0 0 0.500000 
 texture n "acord/nfloor1n.jpg"
 texture s "<mad:3/3/3>acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
+texlayer 3
 
 setshader bumpspecmapparallaxworld
 setshaderparam "specscale" 6.000000 6.000000 6.000000 0.000000
-texture c "<mad:.6/.6/.6><mad:0.25/0.75/0.125>acord/nfloor1.jpg" 0 0 0 0.500000 // 3
+texture c "<mad:.6/.6/.6><mad:0.95/0.35/0.135>acord/nfloor1.jpg" 0 0 0 0.500000 // 3
 texture n "acord/nfloor1n.jpg"
-texture s "acord/nfloor1s.jpg"
+texture s "<mad:3/3/3>acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
@@ -126,13 +127,15 @@ texture c "<mad:.6/.6/.6>acord/nfloor1.jpg" 0 0 0 0.500000 // 4
 texture n "acord/nfloor1n.jpg"
 texture s "<mad:3/3/3>acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
+texlayer 5
 
 setshader bumpspecmapparallaxworld
 setshaderparam "specscale" 6.000000 6.000000 6.000000 0.000000
-texture c "<mad:.6/.6/.6><mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 0.500000 // 5
+texture c "<mad:.6/.6/.6><mad:1.3/1.3/1.3>acord/nfloor1.jpg" 0 0 0 0.500000 // 5
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
+texlayer 4
 
 setshader bumpspecmapparallaxworld
 setshaderparam "specscale" 6.000000 6.000000 6.000000 0.000000
@@ -140,6 +143,7 @@ texture c "<mad:.6/.6/.6><mad:0.75/0.25/0.75>acord/nfloor1.jpg" 0 0 0 0.500000 /
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
+texlayer 3
 
 setshader bumpspecmapparallaxworld
 setshaderparam "specscale" 6.000000 6.000000 6.000000 0.000000
@@ -147,6 +151,7 @@ texture c "<mad:.6/.6/.6><mad:0.75/0.75/0.75>acord/nfloor1.jpg" 0 0 0 0.500000 /
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
+texlayer 4
 
 setshader stdworld
 texture c "<mad:.6/.6/.6>acord/blood.png" 0 0 0 1.000000 // 8
@@ -3495,3 +3500,4 @@ mapsound "sounds/ambience/waterfall_huge" 255 "air" -1 -1
 mapsound "sounds/ambience/waterfall_indoor" 255 "air" -1 -1
 mapsound "sounds/ambience/waterfall_medium" 255 "air" -1 -1
 mapsound "sounds/ambience/wind" 255 "air" -1 -1
+
