--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -3,31 +3,33 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
-// airfric 25.0
+// aircurb 25.0
 // ambient 0x191919
 // blurlms 0
 // blurskylight 0
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudalpha 1.0
 // cloudblend 1.0
 // cloudbox ""
 // cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
+// cloudglare 0
 // cloudheight 0.001
 // cloudlayer "acord/sky2cloud"
+// cloudlayerblend 1.0
+// cloudlayercolour 0xFFFFFF
+// cloudlayerglare 0
 // cloudscale 0.01
 // cloudscrollx 0.01
 // cloudscrolly 0.01
 // cloudsubdiv 16
-crawlspeed 20
+// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
-// floatfric 5.0
-// floorfric 5.0
+// floorcurb 5.0
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
@@ -35,10 +37,9 @@ crawlspeed 20
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// grasstaper 0.2
-gravity 50
-impulsemod 60
-impulsespeed 30
+// gravity 50.0
+// impulsemod 60.0
+// impulsespeed 30.0
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -51,22 +52,24 @@ impulsespeed 30
 // lighterror 8
 // lightlod 0
 // lightprecision 40
-// liquiddampen 0.5
-// liquidfric 10.0
-// liquidscale 0.9
+// liquidcurb 10.0
+// liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
 // maptitle "Refuge by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-movespeed 50
-numplayers 8
-// numteamplayers 8
+// movespeed 50.0
+// numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// sinkfric 2.0
+// skybgcolour 0x000000
+// skybgglare 1
+// skyblend 1.0
 // skybox "acord/sky2"
+// skycolour 0xFFFFFF
+// skyglare 1
 // skylight 0xFF6644
 // skytexture 1
 // slopez 0.5
